last commit my project

--- a/src/ProjetBundle/Resources/views/bailleur/msn.html.twig
+++ b/src/ProjetBundle/Resources/views/bailleur/msn.html.twig
@@ -1,10 +1,11 @@
 <h1>Les bailleurs</h1>
 <p>  <a href="{{ path('bailleur_new') }}">Create a new bailleur</a> </p>
-<table class="table">
+<table class="" border="2" cellpadding="1" cellspacing="1" align="center">
     <thead>
     <tr>
         <th>Id</th>
         <th>Nom</th>
+        <th>Sigle</th>
         <th>Options</th>
     </tr>
     </thead>
